--- a/.env
+++ b/.env
@@ -1,8 +1,5 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_d2VsbC1zcGlkZXItMzAuY2xlcmsuYWNjb3VudHMuZGV2JA
+CLERK_SECRET_KEY=sk_test_hJRhqXJbW4C9zbMr27KHWtmIsnVW7GmsX3igGem3tx
 
 DATABASE_URL="postgresql://postgres:Dj4Mv5lUzmKgMo9b@db.ckpojdcphikbcqlfsfyk.supabase.co:5432/postgres"
 
